...
    <string name="sign_in">Sign In Witn Google</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>

    <!-- User Info -->
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_email">User email</string>


    <!-- Bottom Navigation -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
...
    <string name="journal_date">Monday, 25 June</string>
    <string name="journal_image">Emotion</string>
    <string name="journal_time">13:13</string>
    <string name="journal_feeling">GOOD</string>
    <string name="journal_text">What are your likely first 5 steps from your idea for an app?</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>


    <!-- TODO: CALENDER -->
    <string name="text_calender">CALENDER</string>

    <!-- TODO: NEW JOURNAL ENTRY -->
    <string name="new_journal_home">JOURNAL</string>
    <string name="title">How Was Your Day?</string>
    <string name="new_journal_date">Select a date</string>
    <string name="new_journal_time">Select a time.</string>
    <string name="laugh">Laugh</string>
    <string name="happy">Happy</string>
    <string name="meh">Meh</string>
    <string name="sad">Sad</string>
    <string name="cry">Crying</string>

    <!-- TODO: USER -->
    <string name="action_user">User</string>

    <!-- TODO: MENU -->
    <string name="user_image">User Image</string>
    <string name="user_fullname">Osaigbovo Odiase</string>
    <string name="signout">Sign Out</string>

...
