<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <!-- TODO CHANGE ICON TO CALENDER-->
    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/title_calender" />

</menu>
