...
 * limitations under the License.
 *-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:fitsSystemWindows="true"
    android:weightSum="4">

...
        app:layout_constraintStart_toStartOf="@+id/sign_mainheading_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_mainheading_text"
        tools:text="Firebase User ID: 123456789abc" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:visibility="visible"
...
